[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/cursor/Cursor.gd" type="Script" id=2]
[ext_resource path="res://scripts/hex/Hexer.gd" type="Script" id=3]
[ext_resource path="res://scripts/world_camera/WorldCamera.gd" type="Script" id=4]
[ext_resource path="res://sprites/sprites.png" type="Texture" id=5]
[ext_resource path="res://scripts/hud/Clock.gd" type="Script" id=6]
[ext_resource path="res://scripts/hud/Build.gd" type="Script" id=7]
[ext_resource path="res://scripts/hud/ClockControl.gd" type="Script" id=8]
[ext_resource path="res://scripts/hud/HexContextMenu.gd" type="Script" id=9]
[ext_resource path="res://scripts/hud/Minimap.gd" type="Script" id=10]

[sub_resource type="TileSet" id=1]
0/name = "TundraMarsh"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( -4, -18 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 48, 32, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Ocean"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( -4, -18 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 224, 0, 32, 48 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Snow"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( -4, -18 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 96, 32, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Ice"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( -4, -18 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 160, 96, 32, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Bare"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( -4, -18 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 144, 32, 48 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Grassland"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( -4, -18 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tundra"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( -4, -18 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 192, 48, 32, 48 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Marsh"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( -4, -18 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 224, 48, 32, 48 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Taiga"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( -4, -18 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 96, 32, 48 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Shrubland"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( -4, -18 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 240, 32, 48 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "TemperateDeciduousForest"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( -4, -18 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 32, 0, 32, 48 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "TemperateRainForest"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( -4, -18 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 0, 32, 48 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "DesertHills"
12/texture = ExtResource( 5 )
12/tex_offset = Vector2( -4, -18 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 32, 144, 32, 48 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "SubtropicalDesert"
13/texture = ExtResource( 5 )
13/tex_offset = Vector2( -4, -18 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 64, 144, 32, 48 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "TropicalSeasonalForest"
14/texture = ExtResource( 5 )
14/tex_offset = Vector2( -4, -18 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 128, 48, 32, 48 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Mountain"
15/texture = ExtResource( 5 )
15/tex_offset = Vector2( -4, -18 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 160, 0, 32, 48 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Hills"
16/texture = ExtResource( 5 )
16/tex_offset = Vector2( -4, -18 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 96, 0, 32, 48 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "SnowHills"
17/texture = ExtResource( 5 )
17/tex_offset = Vector2( -4, -18 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 96, 96, 32, 48 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "WoodedHills"
18/texture = ExtResource( 5 )
18/tex_offset = Vector2( -4, -18 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 128, 0, 32, 48 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "TaigaHills"
19/texture = ExtResource( 5 )
19/tex_offset = Vector2( -4, -18 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 128, 96, 32, 48 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "DesertMountain"
20/texture = ExtResource( 5 )
20/tex_offset = Vector2( -4, -18 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 96, 144, 32, 48 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "None"
21/texture = ExtResource( 5 )
21/tex_offset = Vector2( -4, -18 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 32, 240, 32, 48 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "Scorched"
22/texture = ExtResource( 5 )
22/tex_offset = Vector2( -4, -18 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 0, 144, 32, 48 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "TemperateDesert"
23/texture = ExtResource( 5 )
23/tex_offset = Vector2( -4, -18 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 64, 144, 32, 48 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0
24/name = "TropicalRainForest"
24/texture = ExtResource( 5 )
24/tex_offset = Vector2( -4, -18 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 0, 192, 32, 48 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape_one_way = false
24/shape_one_way_margin = 0.0
24/shapes = [  ]
24/z_index = 0
25/name = "FreshWater"
25/texture = ExtResource( 5 )
25/tex_offset = Vector2( -4, -18 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 192, 0, 32, 48 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape_one_way = false
25/shape_one_way_margin = 0.0
25/shapes = [  ]
25/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="WorldCamera" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 4 )

[node name="Hexer" type="TileMap" parent="."]
position = Vector2( -12, -14 )
mode = 2
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 48 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 24, 0, 0, 28, 0, 0 )
cell_half_offset = 4
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
script = ExtResource( 3 )

[node name="Cursor" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Highlight" type="Node2D" parent="Cursor"]
visible = false

[node name="Hex" type="Polygon2D" parent="Cursor/Highlight"]
color = Color( 1, 1, 1, 0.462745 )
antialiased = true
polygon = PoolVector2Array( -16, 0, -8, -14, 8, -14, 16, 0, 8, 14, -8, 14 )

[node name="LabelScreen" type="Label" parent="Cursor/Highlight"]
margin_left = 5.0
margin_top = -38.5833
margin_right = 52.0
margin_bottom = -24.5833
text = "SCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaCoords" type="Label" parent="Cursor/Highlight"]
margin_left = 55.0
margin_top = -38.5833
margin_right = 105.0
margin_bottom = -24.5833
text = "SCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHex" type="Label" parent="Cursor/Highlight"]
margin_left = 25.0
margin_top = -18.5833
margin_right = 56.0
margin_bottom = -4.58325
text = "HEX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HexCoords" type="Label" parent="Cursor/Highlight"]
margin_left = 55.0
margin_top = -18.5833
margin_right = 105.0
margin_bottom = -4.58325
text = "HEX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContextMenus" type="CanvasLayer" parent="."]

[node name="HexContextMenu" type="PopupPanel" parent="ContextMenus"]
rect_pivot_offset = Vector2( 931.401, 310.347 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="VBoxContainer" parent="ContextMenus/HexContextMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoordinatesGroup" type="HBoxContainer" parent="ContextMenus/HexContextMenu/InfoContainer"]
margin_right = 172.0
margin_bottom = 14.0
size_flags_horizontal = 2

[node name="CoordinatesLabel" type="Label" parent="ContextMenus/HexContextMenu/InfoContainer/CoordinatesGroup"]
margin_right = 80.0
margin_bottom = 14.0
text = "Coordinates:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coordinates" type="Label" parent="ContextMenus/HexContextMenu/InfoContainer/CoordinatesGroup"]
margin_left = 84.0
margin_right = 172.0
margin_bottom = 14.0
text = "(XXX,XXX,XXX)"

[node name="Build" type="MenuButton" parent="ContextMenus/HexContextMenu/InfoContainer"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 38.0
text = "Build"
flat = false
expand_icon = true
script = ExtResource( 7 )

[node name="Demolish" type="Button" parent="ContextMenus/HexContextMenu/InfoContainer"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 62.0
text = "Demolish"

[node name="PopupMenu" type="PopupMenu" parent="ContextMenus"]
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Minimap" type="Sprite" parent="HUD"]
script = ExtResource( 10 )

[node name="Cursor" type="ColorRect" parent="HUD/Minimap"]
margin_right = 1.0
margin_bottom = 1.0
color = Color( 1, 0, 0, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="HBoxContainer" parent="HUD"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
mouse_filter = 2
custom_constants/separation = 40
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="HUD/InfoContainer"]
margin_left = 1427.0
margin_right = 1477.0
margin_bottom = 14.0
text = "1.000 G"

[node name="Clock" type="Label" parent="HUD/InfoContainer"]
margin_left = 1517.0
margin_right = 1580.0
margin_bottom = 14.0
text = "A.D. 1600"
align = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsHContainer" type="HBoxContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsVContainer" type="VBoxContainer" parent="HUD/ControlsHContainer"]
margin_left = 1534.0
margin_right = 1580.0
margin_bottom = 890.0
mouse_filter = 2
alignment = 2

[node name="ClockControl" type="Button" parent="HUD/ControlsHContainer/ControlsVContainer"]
margin_top = 870.0
margin_right = 46.0
margin_bottom = 890.0
text = "Clock"
script = ExtResource( 8 )
[connection signal="change" from="WorldCamera" to="Hexer" method="_on_WorldCamera_change" flags=3]
[connection signal="change" from="WorldCamera" to="HUD/Minimap" method="_on_WorldCamera_change"]
[connection signal="hex_enter" from="Cursor" to="Hexer" method="_on_Cursor_hex_enter"]
[connection signal="hex_exit" from="Cursor" to="Hexer" method="_on_Cursor_hex_exit"]
[connection signal="hex_pressed" from="Cursor" to="ContextMenus/HexContextMenu" method="_on_Cursor_hex_pressed"]
[connection signal="pressed" from="HUD/ControlsHContainer/ControlsVContainer/ClockControl" to="HUD/ControlsHContainer/ControlsVContainer/ClockControl" method="_on_ClockControl_pressed"]
